--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,10 +4,7 @@ on:
   push:
     branches:
       - main
-      - feature*
-  pull_request:
-    branches:
-      - main
+      - feature/*
 
 jobs:
     build:
