--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,6 +10,9 @@ jobs:
     build:
       runs-on: ubuntu-latest
       steps:
+        - name: dir
+          run: ls -la
+          
         - name: Checkout repository
           uses: actions/checkout@v2
 
