set env variables.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,17 +23,24 @@ jobs:
           working-directory: environments/dev
           run: |
             ls -la
+            export ARM_SUBSCRIPTION_ID="cffaa289-ca3b-4126-81da-eb8bc9ef39e9"
+            export ARM_TENANT_ID="d71b85a1-bd52-4608-b997-4a1d5cd16f6a"
+            export ARM_CLIENT_ID="${{secrets.CLIENT_ID}}"
+            export ARM_CLIENT_SECRET="${{secrets.CLIENT_SECRET}}"
 
         - name: Setup Terraform
           uses: hashicorp/setup-terraform@v1
          
         - name: Terraform Init
+          working-directory: environments/dev
           run: terraform init
 
         - name: Terraform Validate
+          working-directory: environments/dev
           run: terraform validate
 
         - name: Terraform Plan
+          working-directory: environments/dev
           run: terraform plan
 
     
