UPdated enviroment variables.

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,10 +18,11 @@ jobs:
           working-directory: environments/dev
           run: |
             echo "setting up env variables"
-            echo "ARM_SUBSCRIPTION_ID=cffaa289-ca3b-4126-81da-eb8bc9ef39e9" >> $GITHUB_ENV
-            echo "ARM_TENANT_ID=d71b85a1-bd52-4608-b997-4a1d5cd16f6a" >> $GITHUB_ENV
+            echo "ARM_SUBSCRIPTION_ID=${{secrets.SUBSCRIPTION_ID}}" >> $GITHUB_ENV
+            echo "ARM_TENANT_ID=${{secrets.TENANTID}}" >> $GITHUB_ENV
             echo "ARM_CLIENT_ID=${{secrets.CLIENT_ID}}" >> $GITHUB_ENV
             echo "ARM_CLIENT_SECRET=${{secrets.CLIENT_SECRET}}" >> $GITHUB_ENV
+            echo "TF_VAR_subscription_id=${{secrets.SUBSCRIPTION_ID}}" >> $GITHUB_ENV
             
         - name: Setup Terraform
           uses: hashicorp/setup-terraform@v1
